Front-end: Added basic member list and models.

--- a/frontend/src/app/member/member.component.html
+++ b/frontend/src/app/member/member.component.html
@@ -1,1 +1,20 @@
-<p>member works!</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Phone number</th>
+            <th>Id Card Number</th>
+            <th>Address</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let member of members">
+            <td>{{ member.name }}</td>
+            <td>{{ member.phoneNumber }}</td>
+            <td>{{ member.idCardNumber }}</td>
+            <td>{{ member.address }}</td>
+            <td>{{ member.status }}</td>
+        </tr>
+    </tbody>
+</table>
