Front-end: delete for member implemented, update form routed in.

--- a/frontend/src/app/member/member-search/member-search.component.html
+++ b/frontend/src/app/member/member-search/member-search.component.html
@@ -1,4 +1,4 @@
-<h3>Keresés</h3>
+<h3>Search members</h3>
 <form [formGroup]="memberSearchForm">
     <label for="id">Id</label>
     <input type="text" class="form-control" id="id" formControlName="id">
