--- a/frontend/src/app/borrowable/borrowable-search/borrowable-search.component.html
+++ b/frontend/src/app/borrowable/borrowable-search/borrowable-search.component.html
@@ -1,4 +1,4 @@
-<h3>Search members</h3>
+<h3>Search borrowables</h3>
 <form [formGroup]="borrowableSearchForm">
     <label for="title">Title</label>
     <input type="text" class="form-control" id="title" formControlName="title">
