Front-end: Retrieving member data for Borrow works.

--- a/frontend/src/app/member/member.component.html
+++ b/frontend/src/app/member/member.component.html
@@ -37,6 +37,9 @@
                                 <button (click)="activateMember(member)" class="btn btn-info">Activate</button>
                             </ng-template>
                         </td>
+                        <td>
+                            <button (click)="startBorrow(member.id)" class="btn btn-primary">Borrow</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
