--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,12 +6,15 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link text-white" routerLink="/member">Members</a>
-          </li>
-          <li class="nav-item">
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/member">Members</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-white" routerLink="/borrowable">Borrowables</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/borrow">Borrows</a>
+      </li>
       </ul>
   </div>
 </nav>
