Front-end: Packing from and to borrow cart now works.

--- a/frontend/src/app/borrow/borrow-screen/borrowables-list/borrowables-list.component.html
+++ b/frontend/src/app/borrow/borrow-screen/borrowables-list/borrowables-list.component.html
@@ -20,7 +20,7 @@
             <td>{{ borrowable.acquirementDate }}</td>
             <td>{{ borrowable.status }}</td>
             <td>
-                <button class="btn btn-info" (click)="addToCart(borrowable)">Add to Cart</button>
+                <button *ngIf="borrowable.status === 'f'" class="btn btn-info" (click)="addToCart(borrowable)">Add to Cart</button>
             </td>
         </tr>
     </tbody>
