--- a/frontend/src/app/borrow/borrow-screen/borrow-screen.component.html
+++ b/frontend/src/app/borrow/borrow-screen/borrow-screen.component.html
@@ -3,10 +3,13 @@
         <div class="col-md-4">
             <app-member-data [memberBorrows]="memberBorrows"></app-member-data>
         </div>
+        <div class="col-md-8">
+            <app-cart [toCart]="toCart" [stillAllowedBorrows]="stillAllowedBorrows" (fromCart)="sendToList($event)"></app-cart>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <app-borrowables-list></app-borrowables-list>
+            <app-borrowables-list [stillAllowedBorrows]="stillAllowedBorrows" (toCart)="sendToCart($event)" [fromCart]="fromCart"></app-borrowables-list>
         </div>
     </div>
 </div>
