Added skeleton for lateness.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,7 +14,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="/borrow">Borrows</a>
-      </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/lateness">Lateness</a>
+        </li>
       </ul>
   </div>
 </nav>
