--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+.my-box {
+    margin: 0.5rem;
+    padding: 0.5rem;
+}
