Styled lateness and borrows.

--- a/frontend/src/app/borrow/borrow-screen/cart/cart.component.html
+++ b/frontend/src/app/borrow/borrow-screen/cart/cart.component.html
@@ -1,26 +1,30 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Max borrow time</th>
-            <th>Type</th>
-            <th>Acquirement date</th>
-            <th>Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let borrowable of cart" [class]="borrowable.status === 'f' ? 'table-success' : 'table-danger'">
-            <td>{{ borrowable.title }}</td>
-            <td>{{ borrowable.author }}</td>
-            <td>{{ borrowable.maxBorrowTime }}</td>
-            <td>{{ borrowable.type }}</td>
-            <td>{{ borrowable.acquirementDate }}</td>
-            <td>{{ borrowable.status }}</td>
-            <td>
-                <button class="btn btn-danger" (click)="removeFromCart(borrowable)">Remove from Cart</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<button class="btn btn-primary" (click)="borrowItems()">Borrow</button>
+<div class="card my-box">
+    <h3 class="card-header bg-primary text-white" style="float:right;">Borrow Cart</h3>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Max borrow time</th>
+                <th>Type</th>
+                <th>Acquirement date</th>
+                <th>Status</th>
+                <th>#</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let borrowable of cart">
+                <td>{{ borrowable.title }}</td>
+                <td>{{ borrowable.author }}</td>
+                <td>{{ borrowable.maxBorrowTime }}</td>
+                <td>{{ borrowable.type }}</td>
+                <td>{{ borrowable.acquirementDate }}</td>
+                <td>{{ borrowable.status }}</td>
+                <td>
+                    <button class="btn btn-danger" (click)="removeFromCart(borrowable)">Remove from Cart</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <button class="btn btn-primary btn-lg" style="float: right;" (click)="borrowItems()">Borrow</button>
+</div>
