--- a/frontend/src/app/borrow/borrow-screen/borrowables-list/borrowables-list.component.html
+++ b/frontend/src/app/borrow/borrow-screen/borrowables-list/borrowables-list.component.html
@@ -1,6 +1,6 @@
 <h3>Choose borrowable:</h3>
 <table class="table">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th>Title</th>
             <th>Author</th>
