--- a/frontend/src/app/borrow/borrow-screen/member-data/member-data.component.html
+++ b/frontend/src/app/borrow/borrow-screen/member-data/member-data.component.html
@@ -1,17 +1,19 @@
-
-<form>
-    <label for="name">Name</label>
-    <input type="text" id="name" class="form-control" [value]="memberBorrows.name" readonly>
-    <label for="idCardNumber">Id Card number</label>
-    <input type="text" id="idCardNumber" class="form-control" [value]="memberBorrows.idCardNumber" readonly>
-    <label for="phoneNumber">Phone number</label>
-    <input type="text" id="phoneNumber" class="form-control" [value]="memberBorrows.phoneNumber" readonly>
-    <label for="address">Address</label>
-    <input type="text" id="address" class="form-control" [value]="memberBorrows.address" readonly>
-    <label for="status">Status</label>
-    <input type="text" class="form-control" [value]="getDisplayNameOfStatus(memberBorrows.status)" readonly>
-    <label for="numberOfCurrentBorrows">Number of current borrows</label>
-    <input type="text" id="numberOfCurrentBorrows" class="form-control" [value]="memberBorrows.numberOfCurrentBorrows" readonly>
-    <label for="numberOfStillAllowedBorrows">Number of still allowed borrows</label>
-    <input type="text" id="numberOfStillAllowedBorrows" class="form-control" [value]="memberBorrows.numberOfStillAllowedBorrows" readonly>
-</form>
+<div class="card my-box">
+    <h4 class="card-header bg-primary text-white">Member data</h4>
+    <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" class="form-control" [value]="memberBorrows.name" readonly>
+        <label for="idCardNumber">Id Card number</label>
+        <input type="text" id="idCardNumber" class="form-control" [value]="memberBorrows.idCardNumber" readonly>
+        <label for="phoneNumber">Phone number</label>
+        <input type="text" id="phoneNumber" class="form-control" [value]="memberBorrows.phoneNumber" readonly>
+        <label for="address">Address</label>
+        <input type="text" id="address" class="form-control" [value]="memberBorrows.address" readonly>
+        <label for="status">Status</label>
+        <input type="text" class="form-control" [value]="getDisplayNameOfStatus(memberBorrows.status)" readonly>
+        <label for="numberOfCurrentBorrows">Number of current borrows</label>
+        <input type="text" id="numberOfCurrentBorrows" class="form-control" [value]="memberBorrows.numberOfCurrentBorrows" readonly>
+        <label for="numberOfStillAllowedBorrows">Number of still allowed borrows</label>
+        <input type="text" id="numberOfStillAllowedBorrows" class="form-control" [value]="memberBorrows.numberOfStillAllowedBorrows" readonly>
+    </form>
+</div>
