--- a/frontend/src/app/borrow/borrow.component.html
+++ b/frontend/src/app/borrow/borrow.component.html
@@ -1,8 +1,8 @@
 <div class="container-float">
     <div class="row">
-        <div class="col-md-12">
-            <table class="table">
-                <thead>
+        <div class="col-md-12 my-box">
+            <table class="table table-striped">
+                <thead class="thead-dark">
                     <tr>
                         <th>Title</th>
                         <th>Author</th>
