--- a/frontend/src/app/borrow/bring-back/bring-back.component.html
+++ b/frontend/src/app/borrow/bring-back/bring-back.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
-            <form>
+        <div class="col-md-4">
+            <div class="card my-box">
+                <h4 class="card-header bg-primary text-white">Member</h4>
                 <label for="name">Name</label>
                 <input type="text" id="name" [value]="mergedData.member?.name" class="form-control" readonly>
                 <label for="idCardNumber">Id Card number</label>
@@ -10,10 +11,18 @@
                 <input type="text" id="phoneNumber" [value]="mergedData.member?.phoneNumber" class="form-control" readonly>
                 <label for="address">Address</label>
                 <input type="text" id="address" [value]="mergedData.member?.address" class="form-control" readonly>
-                
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card my-box">
+                <h4 class="card-header bg-primary text-white">Borrow</h4>
                 <label for="dateOfBorrow">Date of borrow</label>
                 <input type="text" id="dateOfBorrow" [value]="mergedData.borrow?.dateOfBorrow" class="form-control" readonly>
-                
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card my-box">
+                <h4 class="card-header bg-primary text-white">Borrowable</h4>
                 <label for="title">Title</label>
                 <input type="text" id="title" [value]="mergedData.borrowable?.title" class="form-control" readonly>
                 <label for="author">Author</label>
@@ -23,7 +32,7 @@
                 <label for="maxBorrowTime">Max borrow time</label>
                 <input type="text" id="maxBorrowTime" [value]="mergedData.borrowable?.maxBorrowTime" class="form-control" readonly>
                 <button (click)="bringBack(mergedData.borrowable.serialNumber)" class="btn btn-primary">Bring back</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
