--- a/frontend/src/app/lateness/lateness-descriptor/lateness-descriptor.component.html
+++ b/frontend/src/app/lateness/lateness-descriptor/lateness-descriptor.component.html
@@ -17,7 +17,7 @@
     
         <div class="col-md-4">
             <div class="card my-box">
-                <h4 class="card-header bg-primary text-white">Member</h4>
+                <h4 class="card-header bg-primary text-white">Borrow</h4>
                 <label for="dateOfBorrow">Date of borrow</label>
                 <input type="text" id="dateOfBorrow" [value]="lateness.borrow?.dateOfBorrow" class="form-control" readonly>
             </div>
@@ -25,7 +25,7 @@
     
         <div class="col-md-4">
             <div class="card my-box">
-                <h4 class="card-header bg-primary text-white">Member</h4>
+                <h4 class="card-header bg-primary text-white">Borrowable</h4>
                 <label for="title">Title</label>
                 <input type="text" id="title" [value]="lateness.borrowable?.title" class="form-control" readonly>
                 <label for="author">Author</label>
