--- a/frontend/src/app/member/member-search/member-search.component.html
+++ b/frontend/src/app/member/member-search/member-search.component.html
@@ -1,10 +1,12 @@
-<h3>Search members</h3>
-<form [formGroup]="memberSearchForm">
-    <label for="id">Id</label>
-    <input type="text" class="form-control" id="id" formControlName="id">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" formControlName="name">
-    <label for="idCardNumber">Id Card number</label>
-    <input type="text" class="form-control" id="idCardNumber" formControlName="idCardNumber">
-    <button class="btn btn-primary" (click)="searchMembers()">Search members</button>
-</form>
+<div class="card my-box">
+    <h3 class="card-header bg-primary text-white">Search members</h3>
+    <form [formGroup]="memberSearchForm">
+        <label for="id">Id</label>
+        <input type="text" class="form-control" id="id" formControlName="id">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" formControlName="name">
+        <label for="idCardNumber">Id Card number</label>
+        <input type="text" class="form-control" id="idCardNumber" formControlName="idCardNumber">
+        <button class="btn btn-primary my-box" style="float: right;" (click)="searchMembers()">Search members</button>
+    </form>
+</div>
