--- a/frontend/src/app/borrow/bring-back/bring-back.component.html
+++ b/frontend/src/app/borrow/bring-back/bring-back.component.html
@@ -4,33 +4,33 @@
             <div class="card my-box">
                 <h4 class="card-header bg-primary text-white">Member</h4>
                 <label for="name">Name</label>
-                <input type="text" id="name" [value]="mergedData.member?.name" class="form-control" readonly>
+                <input type="text" id="name" [value]="mergedData.member.name" class="form-control" readonly>
                 <label for="idCardNumber">Id Card number</label>
-                <input type="text" id="idCardNumber" [value]="mergedData.member?.idCardNumber" class="form-control" readonly>
+                <input type="text" id="idCardNumber" [value]="mergedData.member.idCardNumber" class="form-control" readonly>
                 <label for="phoneNumber">Phone number</label>
-                <input type="text" id="phoneNumber" [value]="mergedData.member?.phoneNumber" class="form-control" readonly>
+                <input type="text" id="phoneNumber" [value]="mergedData.member.phoneNumber" class="form-control" readonly>
                 <label for="address">Address</label>
-                <input type="text" id="address" [value]="mergedData.member?.address" class="form-control" readonly>
+                <input type="text" id="address" [value]="mergedData.member.address" class="form-control" readonly>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card my-box">
                 <h4 class="card-header bg-primary text-white">Borrow</h4>
                 <label for="dateOfBorrow">Date of borrow</label>
-                <input type="text" id="dateOfBorrow" [value]="mergedData.borrow?.dateOfBorrow" class="form-control" readonly>
+                <input type="text" id="dateOfBorrow" [value]="mergedData.borrow.dateOfBorrow" class="form-control" readonly>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card my-box">
                 <h4 class="card-header bg-primary text-white">Borrowable</h4>
                 <label for="title">Title</label>
-                <input type="text" id="title" [value]="mergedData.borrowable?.title" class="form-control" readonly>
+                <input type="text" id="title" [value]="mergedData.borrowable.title" class="form-control" readonly>
                 <label for="author">Author</label>
-                <input type="text" id="author" [value]="mergedData.borrowable?.author" class="form-control" readonly>
+                <input type="text" id="author" [value]="mergedData.borrowable.author" class="form-control" readonly>
                 <label for="type">Type</label>
-                <input type="text" id="type" [value]="mergedData.borrowable?.type" class="form-control" readonly>
+                <input type="text" id="type" [value]="typeConvert(mergedData.borrowable.type)" class="form-control" readonly>
                 <label for="maxBorrowTime">Max borrow time</label>
-                <input type="text" id="maxBorrowTime" [value]="mergedData.borrowable?.maxBorrowTime" class="form-control" readonly>
+                <input type="text" id="maxBorrowTime" [value]="mergedData.borrowable.maxBorrowTime" class="form-control" readonly>
                 <button (click)="bringBack(mergedData.borrowable.serialNumber)" class="btn btn-primary">Bring back</button>
             </div>
         </div>
