--- a/frontend/src/app/lateness/lateness-descriptor/lateness-descriptor.component.html
+++ b/frontend/src/app/lateness/lateness-descriptor/lateness-descriptor.component.html
@@ -5,13 +5,13 @@
             <div class="card my-box">
                 <h4 class="card-header bg-primary text-white">Member</h4>
                 <label for="name">Name</label>
-                <input type="text" id="name" [value]="lateness.member?.name" class="form-control" readonly>
+                <input type="text" id="name" [value]="lateness.member.name" class="form-control" readonly>
                 <label for="idCardNumber">Id Card number</label>
-                <input type="text" id="idCardNumber" [value]="lateness.member?.idCardNumber" class="form-control" readonly>
+                <input type="text" id="idCardNumber" [value]="lateness.member.idCardNumber" class="form-control" readonly>
                 <label for="phoneNumber">Phone number</label>
-                <input type="text" id="phoneNumber" [value]="lateness.member?.phoneNumber" class="form-control" readonly>
+                <input type="text" id="phoneNumber" [value]="lateness.member.phoneNumber" class="form-control" readonly>
                 <label for="address">Address</label>
-                <input type="text" id="address" [value]="lateness.member?.address" class="form-control" readonly>
+                <input type="text" id="address" [value]="lateness.member.address" class="form-control" readonly>
             </div>
         </div>
     
@@ -19,7 +19,7 @@
             <div class="card my-box">
                 <h4 class="card-header bg-primary text-white">Borrow</h4>
                 <label for="dateOfBorrow">Date of borrow</label>
-                <input type="text" id="dateOfBorrow" [value]="lateness.borrow?.dateOfBorrow" class="form-control" readonly>
+                <input type="text" id="dateOfBorrow" [value]="lateness.borrow.dateOfBorrow" class="form-control" readonly>
             </div>
         </div>
     
@@ -27,13 +27,13 @@
             <div class="card my-box">
                 <h4 class="card-header bg-primary text-white">Borrowable</h4>
                 <label for="title">Title</label>
-                <input type="text" id="title" [value]="lateness.borrowable?.title" class="form-control" readonly>
+                <input type="text" id="title" [value]="lateness.borrowable.title" class="form-control" readonly>
                 <label for="author">Author</label>
-                <input type="text" id="author" [value]="lateness.borrowable?.author" class="form-control" readonly>
+                <input type="text" id="author" [value]="lateness.borrowable.author" class="form-control" readonly>
                 <label for="type">Type</label>
-                <input type="text" id="type" [value]="lateness.borrowable?.type" class="form-control" readonly>
+                <input type="text" id="type" [value]="typeConvert(lateness.borrowable.type)" class="form-control" readonly>
                 <label for="maxBorrowTime">Max borrow time</label>
-                <input type="text" id="maxBorrowTime" [value]="lateness.borrowable?.maxBorrowTime" class="form-control" readonly>
+                <input type="text" id="maxBorrowTime" [value]="lateness.borrowable.maxBorrowTime" class="form-control" readonly>
             </div>
         </div>
     </div>
